Code Refactoring and working stage 1
